--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,8 @@
         flags: flags
     });
 
-    var socket = new WebSocket('wss://echo.websocket.org');
-    // var socket = new WebSocket('ws://relay.ndpi.io');
+    // var socket = new WebSocket('wss://echo.websocket.org');
+    var socket = new WebSocket('ws://relay.ndpi.io');
 
     // When a command goes to the `sendMessage` port, we pass the message
     // along to the WebSocket.
